Infrastructure: Add mapping for the country entity

--- a/.env.dev
+++ b/.env.dev
@@ -11,7 +11,7 @@ JWT_EXP_CLAIM_IS_REQUIRED=false
 ###< JWT ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://app:app:@postgres:5432/app-dev?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://app:app@postgres:5432/app-dev?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
