Domain: Add a slug to the championship entity

--- a/src/Backend/MotorsportTracker/Shared/Infrastructure/DependencyInjection/Symfony/motorsport_tracker_services.yaml
+++ b/src/Backend/MotorsportTracker/Shared/Infrastructure/DependencyInjection/Symfony/motorsport_tracker_services.yaml
@@ -1,5 +1,5 @@
-#imports:
-#  - { resource: ../../../../Module/Infrastructure/DependencyInjection/Symfony/module_services.yaml }
+imports:
+  - { resource: ../../../../Championship/Infrastructure/DependencyInjection/Symfony/championship_services.yaml }
 
 services:
   _defaults:
