Feature: Add a Driver Repository to save entities

--- a/src/Backend/MotorsportTracker/Shared/Infrastructure/DependencyInjection/Symfony/motorsport_tracker_services.yaml
+++ b/src/Backend/MotorsportTracker/Shared/Infrastructure/DependencyInjection/Symfony/motorsport_tracker_services.yaml
@@ -1,5 +1,6 @@
 imports:
   - { resource: ../../../../Championship/Infrastructure/DependencyInjection/Symfony/championship_services.yaml }
+  - { resource: ../../../../Driver/Infrastructure/DependencyInjection/Symfony/driver_services.yaml }
 
 services:
   _defaults:
