Feature: Create a new Team
- Application service as a command handler
- Acceptance tests with behat

--- a/behat-config.yml
+++ b/behat-config.yml
@@ -8,6 +8,7 @@ default:
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Championship\SeasonCreationContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Driver\DriverCreationContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Venue\VenueCreationContext
+        - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Team\TeamCreationContext
     api_tests:
       paths: [ features ]
       contexts:
