--- a/etc/Fixtures/motorsport.championship.season.yaml
+++ b/etc/Fixtures/motorsport.championship.season.yaml
@@ -1,3 +1,3 @@
 formulaOne2022:
-  championshipId: '@motorsport.championship.championship.formula1'
+  championshipId: '@motorsport.championship.championship.formulaOne'
   year: 2022
