Tests: Begin implement tests for Backoffice commands
- Contexts with step implementations.
- Dedicated tag to target scenarios.
- Services to run the console application.
- Dedicated test database to prevent emptying dev database.

--- a/behat-config.yml
+++ b/behat-config.yml
@@ -27,6 +27,7 @@ default:
     backoffice_tests:
       paths: [ features ]
       contexts:
-        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\Context
+        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateChampionshipContext
+        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateSeasonContext
       filters:
         tags: '@backoffice'
