--- a/etc/Fixtures/motorsport.event.event.yaml
+++ b/etc/Fixtures/motorsport.event.event.yaml
@@ -3,3 +3,15 @@ dutchGrandPrix2022:
   venueId: '@motorsport.venue.venue.zandvoort'
   index: '16'
   label: 'Dutch GP'
+
+australianGrandPrix2022:
+  seasonId: '@motorsport.championship.season.formulaOne2022'
+  venueId: '@motorsport.venue.venue.melbourne'
+  index: '2'
+  label: 'Australian GP'
+
+emiliaRomagnaGrandPrix2022:
+  seasonId: '@motorsport.championship.season.formulaOne2022'
+  venueId: '@motorsport.venue.venue.emiliaRomagna'
+  index: '3'
+  label: 'Emilia Romagna GP'
