--- a/etc/Fixtures/motorsport.event.eventStep.yaml
+++ b/etc/Fixtures/motorsport.event.eventStep.yaml
@@ -2,3 +2,18 @@ dutchGrandPrix2022Race:
   stepTypeId: '@motorsport.event.stepType.race'
   eventId: '@motorsport.event.event.dutchGrandPrix2022'
   dateTime: '2022-09-04 13:00:00'
+
+australianGrandPrix2022Race:
+  stepTypeId: '@motorsport.event.stepType.race'
+  eventId: '@motorsport.event.event.australianGrandPrix2022'
+  dateTime: '2022-04-10 05:00:00'
+
+emiliaRomagnaGrandPrix2022SprintQualifying:
+  stepTypeId: '@motorsport.event.stepType.sprintQualifying'
+  eventId: '@motorsport.event.event.emiliaRomagnaGrandPrix2022'
+  dateTime: '2022-04-23 14:30:00'
+
+emiliaRomagnaGrandPrix2022Race:
+  stepTypeId: '@motorsport.event.stepType.race'
+  eventId: '@motorsport.event.event.emiliaRomagnaGrandPrix2022'
+  dateTime: '2022-04-24 13:00:00'
