Feature: Create an event from the backoffice

--- a/behat-config.yml
+++ b/behat-config.yml
@@ -33,6 +33,7 @@ default:
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateChampionshipContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Championship\CreateSeasonContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Venue\CreateVenueContext
+        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Event\CreateEventContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\Country\CreateCountryContext
       filters:
         tags: '@backoffice'
