--- a/behat-config.yml
+++ b/behat-config.yml
@@ -21,6 +21,7 @@ default:
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\CalendarContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\StepTypeContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Result\ResultContext
+        - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Car\SearchCarContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\EventContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Racer\RacerContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\Shared\FixturesContext
