--- a/behat-config.yml
+++ b/behat-config.yml
@@ -45,6 +45,7 @@ default:
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Event\CreateEventContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Team\CreateTeamContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Car\CreateCarContext
+        - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Result\ResultContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\MotorsportTracker\Racer\RacerContext
         - Kishlin\Tests\Apps\Backoffice\BackofficeTests\Context\Country\CreateCountryContext
       filters:
