Feature: Search an event by season and keyword

--- a/behat-config.yml
+++ b/behat-config.yml
@@ -17,6 +17,7 @@ default:
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Venue\VenueCreationContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Driver\SearchDriverContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Team\TeamCreationContext
+        - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\SearchEventContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\EventStepContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Team\SearchTeamContext
         - Kishlin\Tests\Backend\UseCaseTests\Context\MotorsportTracker\Event\CalendarContext
