--- a/etc/Fixtures/motorsport.event.eventStep.yaml
+++ b/etc/Fixtures/motorsport.event.eventStep.yaml
@@ -22,3 +22,13 @@ americasMotoGP2022Race:
   stepTypeId: '@motorsport.event.stepType.race'
   eventId: '@motorsport.event.event.americasMotoGP2022'
   dateTime: '2022-04-10 18:00:00'
+
+italianGrandPrix2022Race:
+  stepTypeId: '@motorsport.event.stepType.race'
+  eventId: '@motorsport.event.event.italianGrandPrix2022'
+  dateTime: '2022-09-11 13:00:00'
+
+singaporeGrandPrix2022Race:
+  stepTypeId: '@motorsport.event.stepType.race'
+  eventId: '@motorsport.event.event.singaporeGrandPrix2022'
+  dateTime: '2022-10-02 12:00:00'
