--- a/etc/Fixtures/motorsport.racer.racer.yaml
+++ b/etc/Fixtures/motorsport.racer.racer.yaml
@@ -21,3 +21,21 @@ gaslyAtRedBullRacingIn2019:
   carId: '@motorsport.car.car.redBullRacing2019SecondCar'
   startDate: '2019-01-01 00:00:00'
   endDate: '2019-12-31 23:59:59'
+
+latifiAtWilliamsIn2022FirstPart:
+  driverId: '@motorsport.driver.driver.nicholasLatifi'
+  carId: '@motorsport.car.car.williams2022SecondCar'
+  startDate: '2022-01-01 00:00:00'
+  endDate: '2022-09-04 23:59:59'
+
+latifiAtWilliamsIn2022SecondPart:
+  driverId: '@motorsport.driver.driver.nicholasLatifi'
+  carId: '@motorsport.car.car.williams2022SecondCar'
+  startDate: '2022-09-12 00:00:00'
+  endDate: '2022-12-31 23:59:59'
+
+deVriesAtWilliamsIn2022:
+  driverId: '@motorsport.driver.driver.nyckDeVries'
+  carId: '@motorsport.car.car.williams2022ThirdCar'
+  startDate: '2022-09-05 00:00:00'
+  endDate: '2022-09-11 23:59:59'
